js/js.translator/testData/incremental/invalidation/genericInlineFunctions/libProxy/proxy.1.kt
inline fun foo_proxy(s: String) = foo(s)
